# ftp-viewer

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
lib/cmake/Qt5Ftp/: Qt5FtpConfig.cmake
lib/pkgconfig/: Qt5Ftp.pc
src/: ftpadapter.cpp  ftpadapter.h  ftpdirmodel.cpp  ftpdirmodel.h  ftpmanager.cpp  ftpmanager.h  treedirentry.cpp  treedirentry.h
src/ui/: mainwindow.cpp  mainwindow.h  urlloginwidget.cpp  urlloginwidget.h
